--- a/app/src/main/res/menu/settings_menu.xml
+++ b/app/src/main/res/menu/settings_menu.xml
@@ -5,7 +5,7 @@
         <!-- "Mark Favorite", should appear as action button if possible -->
         <item
             android:id="@+id/action_add_new"
-            android:icon="@drawable/ic_add_white"
+            android:icon="@drawable/ic_add"
             android:title="@string/action_add_new"
             app:showAsAction="always"/>
 
