--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -6,4 +6,8 @@
     <dimen name="spacing_micro">4dp</dimen>
     <dimen name="spacing_normal">8dp</dimen>
     <dimen name="spacing_medium">16dp</dimen>
+    <!--custom dimens-->
+    <dimen name="bottom_button_height">50dp</dimen>
+    <dimen name="spinner_height">40dp</dimen>
+    <dimen name="design_navigation_icon_padding" tools:override="true">16dp</dimen>
 </resources>
